--- a/src/style/sass/components/_weather.scss
+++ b/src/style/sass/components/_weather.scss
@@ -35,6 +35,18 @@
 
 .weather-daily.card {
     border: none;
+    line-height: 1em;
 }
 
+.weather-4Day-text {
+    margin: 1% 0 0 1%;
+}
+
+.weather-4day-temp {
+    margin: 1% 0 0 0;
+}
+
+.weather-content {
+    padding: 1% 20%;
+}
 
