--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,5 +1,9 @@
 @import 'components/_home';
 @import 'components/_weather';
+@import 'components/_calculator';
+@import 'components/_books';
+@import 'components/_browser';
+@import 'components/_news';
 
 body {
   overflow: scroll;
